add some caps